Now grabs all the server files from the User's directory instead of the application resources. Updates map import and export logic as a result. Locs default to shape 10 since that is usually correct.